# FileXORProcessor

./: CMakeLists.txt  README.md  fileprocessor.cpp  fileprocessor.h  main.cpp  mainwindow.cpp  mainwindow.h
